feat: add session save disable switch
